--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,6 +6,9 @@
   justify-content: space-around;
   align-items: center;
 }
+.hamburger {
+  visibility: hidden;
+}
 .searchContainer {
   display: flex;
   justify-content: space-around;
@@ -138,6 +141,9 @@
   .search {
     display: none;
   }
+  .right {
+    flex-direction: column;
+  }
   .links {
     display: none;
   }
@@ -147,31 +153,7 @@
     align-items: center;
     justify-content: space-evenly;
   }
-  .hamburgerdiv {
-    width: 30%;
-    height: 88%;
-    margin-top: 7%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-  @keyframes open1 {
-    from {
-      width: 0%;
-      margin-top: 7%;
-    }
-    to {
-      width: 30%;
-      height: 88%;
-      margin-top: 7%;
-    }
-  }
-  @keyframes close1 {
-    from {
-      width: 30%;
-    }
-    to {
-      width: 0%;
-    }
+  .hamburger {
+    visibility: visible;
   }
 }
